--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
 
     <string name="action_settings">Settings</string>
     <string name="about_text">About</string>
-    <string name="about_content">TheManager is currently under construction and tests by The Creator. The app installed right now is the beta version.</string>
+    <string name="about_content">TheManager v1.1</string>
     <string name="easter_title">Easter Egg</string>
     <string name="enter_text_hint">Enter the text</string>
 
