made the razgolist screen look much better, still more to do

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,7 +64,7 @@
     <string name="log_out_action">Log Out</string>
 
 
-    <string name="enter_message_hint">Type a message…</string>
+    <string name="enter_message_hint">Type a message</string>
 
 
     <!--The Logger Screens-->
